# whisper-api

./: .env  .env_local  Cargo.toml  LICENSE.md  README.md
docs/: er.mwb  er.mwb.bak  twisterdb.sql  whisperdb.sql
src/: main.rs  schema.rs
src/schema/: models.rs  mutations.rs  queries.rs  twisters.rs  users.rs
src/schema/models/: posts.rs  twisters.rs  users.rs
src/schema/mutations/: posts.rs  twisters.rs  users.rs
src/schema/queries/: posts.rs  twisters.rs  users.rs
src/utils/: security.rs
