[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.4"
async-graphql-axum = "5.0.4"
axum = { version = "0.6.1", features = ["headers"] }
dotenv = "0.15.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-native-tls", "all-types"] }
tokio = { version = "1.23.0", features = ["full"] }
